--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -26,3 +26,24 @@ jobs:
         run: docker compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
       - name: Python flake8
         run: docker compose run --rm app sh -c "flake8"
+  
+  terraform:
+    name: terraform
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Terraform Init
+        run: |
+          cd infra/
+          dockercompose run --rm terraform -chdir=deploy/ init -backend=false
+          dockercompose run --rm terraform -chdir=setup/ init -backend=false
+          dockercompose run --rm terraform -chdir=setup/ validate
+          dockercompose run --rm terraform -chdir=setup/ fmt -check
+          dockercompose run --rm terraform -chdir=deploy/ validate
+          dockercompose run --rm terraform -chdir=deploy/ fmt -check
