added permission for network

--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -38,7 +38,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Terraform Init
+      - name: Terraform lint
         run: |
           cd infra/
           docker compose run --rm terraform -chdir=deploy/ init -backend=false
